fix overflow issue

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -7,7 +7,7 @@
 }
 
 .site-branding {
-	text-indent: 300%;
+	text-indent: -999%;
 	height: 0;
 	overflow: hidden;
 }
